--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "ai": "^5.0.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.4.2",
-    "lucide-react": "^0.540.0",
+    "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
