--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.21",
     "@ai-sdk/react": "^2.0.24",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
-    "ai": "^5.0.24",
+    "ai": "^5.0.25",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.4.2",
@@ -27,7 +28,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
+    "streamdown": "^1.1.3",
     "tailwind-merge": "^3.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.1.3"
   },
   "devDependencies": {
