--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "streamdown": "^1.1.3",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
-    "zod": "^4.1.3"
+    "zod": "^4.1.3",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
