--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ai-sdk/openai": "^2.0.21",
     "@ai-sdk/react": "^2.0.24",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
